--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
   <title>AtharvaDumbre | Portfolio</title>
+  <link rel="icon" type="image/png" href="../src/assets/AD.png">
 </head>
 <body>
   <div id="root"></div>
